#12 Fixed contrast issues in offer view. Fixed message form in offer view

--- a/assets/styles/less/formStyles.less
+++ b/assets/styles/less/formStyles.less
@@ -435,21 +435,25 @@ ul.tagit li.tagit-choice .tagit-close{
   width: 100%;
   min-width: 100%;
   max-width: 100%;
-  height: 20em;
-  max-height: 20em;
-  min-height: 20em;
+  height: 15em;
+  max-height: 15em;
+  min-height: 15em;
   resize: none;
+  padding: 5px;
 }
 
 #createMessage{
-  width: 100%;
-  max-width: 100%;
+  width: 75%;
+  max-width: 75%;
   padding: 0;
 }
 
 .formHeading{
   margin-bottom: 1em;
-  color: @DarkerMetroGreen;
+}
+
+#messageBodyLabel{
+  margin: 5px;
 }
 
 .ui-slider-range{
