--- a/assets/styles/less/listStyles.less
+++ b/assets/styles/less/listStyles.less
@@ -2,3 +2,7 @@ ul, li{
   list-style: none;
   color: @MetroDark;
 }
+
+#tags li{
+  color: @MetroLightBlue;
+}
